<resources>

    <string name="app_name">ProjectPromob</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Belum Bergabung? Daftar Sekarang!.</string>
    <string name="btn_link_to_login">Sudah terdaftar? Login disini.</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_editprofile">EDIT PROFILE</string>
    <string name="name">Name</string>
    <string name="title_activity_menu_peta">Map</string>
    <string name="small_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="deskripsi">
        "Ini Deskripsi"
    </string>


</resources>
